--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/node": "^9.5.2",
     "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/vercel": "^9.0.4",
     "@libsql/client": "^0.17.0",
     "astro": "^5.16.15",
     "drizzle-orm": "^0.45.1",
