Convert CSV to Excel (xlsx) for better download experience

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^25.0.10",
     "@types/uuid": "^10.0.0",
     "drizzle-kit": "^0.31.8",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "xlsx": "^0.18.5"
   }
 }
